--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "express": "^4.21.2",
     "chzzk": "^1.10.4",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "express": "^4.21.2",
+    "vercel": "^39.3.0"
   }
 }
